# bond_project

./: ._.gitignore  ._JCB_Analytics_Project_Index.txt  ._function_inventory.txt  ._schema_output.txt  ._~$Spreadsheet_Cashflow_Optimiser.ods  .gitignore  JCB_Analytics_Project_Index.txt  api_server.xlsm  bond_project_tree.txt  debug_bond_weights_df.txt  debug_predicted_running.txt  debug_unified_cf.txt  debug_unified_running.txt  debug_weights_json.txt  fix_imports.py  function_inventory.txt  jcb_analytics.xlsm  jcb_cashflow_notepad.ipynb  jcb_notepad.ipynb  jcb_usefultools.ipynb  list_funcs.py  pyproject.toml  repo_snapshot.txt  requirements-dev.txt  requirements.txt  run_cli.py  run_startup.py  schema_output.txt  validate_schema.py  ~$Spreadsheet_Cashflow_Optimiser.ods
api/: main.py
cashflow_model/: builders.py  conv_bond_model.py
core/: startup.py
database/: insert.py  normalise_types.py  query.py
jcb_analytics/: jcb_analytics.py  jcb_analytics.xlsm
jcb_api/: main.py  run_cli.py
jcb_bond_project/: api_server.py  validate_schema.py
jcb_bond_project/cashflow_model/: builders.py  conv_bond_model.py
jcb_core/: migrate_schema.py  startup.py
jcb_loaders/: compare_sources.py  load_bbergexcel.py  load_bonds.py  load_tradeweb.py
loaders/: classify.py  compare_sources.py  load_bbergexcel.py  load_bonds.py  load_tradeweb.py
models/: __init__.py  cashflows.py
portfolio/: builders.py
tests/: test_imports.py  test_smoke.py  test_smoke_imports.py
z_old_stuff/: ._Spreadsheet_Cashflow_Optimiser.ods  Spreadsheet_Cashflow_Optimiser.ods
(+15 files in other folders)
